# src/main/java/com/ezsportswear/inventory/dto/LoginRequest.java
@@ -1,0 +1,17 @@
+package com.ezsportswear.inventory.dto;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class LoginRequest {
+    @NotBlank(message = "Email is required")
+    @Email(message = "Email format is invalid")
+    private String email;
+
+    @NotBlank(message = "Password is required")
+    private String password;
+}
