# src/main/java/com/ezsportswear/inventory/dto/LoginResponse.java
@@ -1,0 +1,13 @@
+package com.ezsportswear.inventory.dto;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
+public class LoginResponse {
+    @JsonProperty("access_token")
+    private String accessToken;
+}
